# DuET

./: .gitignore  LICENSE  README.md  environment.yml  predict.py  pyproject.toml  train.py
benchmarks/: README.md  config.yaml  framepool_benchmark_all.py  framepool_benchmark_results.tsv  optimus5p_benchmark_all.py  optimus5p_benchmark_results.tsv  run_all.sh
benchmarks/benchlib/: pyproject.toml
benchmarks/benchlib/benchlib/: __init__.py  config.py  metrics.py  runner.py  scaling.py  split.py  util.py
configs/: config.py  duet.yaml  duet_base.yaml  duet_singleencoder.yaml  duet_singletask.yaml  duet_v2_base.yaml  duet_v2_single.yaml  translatelstm_mrl.yaml  translatelstm_te.yaml
data/: datamodule.py  duet.py  generate_sequence_feature.py  sequence_feature_store.py  translatelstm.py  utils.py
downstream_analysis/: attribution_score_and_attention.ipynb  embedding_umap.ipynb  xgboost_feature_importance.ipynb
misc/: Ray2013_rbp_Homo_sapiens.dna_encoded.meme  batch_dataset_example.tsv  duet_base_config.yaml  duet_base_scaler.joblib
models/: duet.py  module.py  translatelstm.py
preprocessing/: README.md  average_all_celltype_TE.py  build_gene_metadata.py  calculate_te.py  environment_preprocessing.yml  example_metadata.tsv  fastq_stats.c  pipeline.sh  quantify.cpp  riboseq_qc_2.R  run.sh  summarize_alignment.py  summarize_preprocessing.py  summarize_qc.py
scripts/: 1.duet_importance_score.py  2.post_processing_modisco.py  2.post_processing_modisco_sbatch.py  Fig5a_information_density.py  Fig5c_te_level_importance.py  Fig5d_in_silico_mutagenesis.py  predict.py  (+5 more)
(+329 files in other folders)
