[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DuET"
version = "1.0.0"
description = "A Unified Deep Learning Framework for Predicting mRNA Translation Efficiency Across Human Cell Types"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "pytorch-lightning>=2.0.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "omegaconf",
    "joblib",
    "scikit-learn",
    "scipy",
    "loguru",
    "tqdm",
]

[project.optional-dependencies]
dev = ["wandb",
       "pyarrow",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
duet = ["ckpts/**/*"]
